--- a/testimonials.html
+++ b/testimonials.html
@@ -37,7 +37,7 @@
             <!-- Nav Bar Start -->
             <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
-                    <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
+                    <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Landscape_CMYK---bg.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -110,21 +110,11 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/BLACKK.gif" alt="Image">
-                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="videos/tvh testimonial.mp4">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/BLACKK.gif" alt="Image">
+                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/tvh testimonial.mp4">
                                 <i class="fa fa-play" style="color: #FDBE33;"></i>
                             </a>
                         </div>
-
-                        <!-- <div id="myModal1" class="modal">
-                            <div class="modal-content">
-                                <span class="closeVid">&times;</span>
-                                <video id="myVideo1" width="100%" controls>
-                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/tvh testimonial.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
-                        </div> -->
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-profile">
@@ -137,44 +127,6 @@
                             <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/testimonial1.PNG" alt="Image">
                         </div>
                     </div>
-                    <!-- <div class="testimonial-item">
-                        <div class="testimonial-profile">
-
-                            <div class="testimonial-name">
-                                
-                                <p>Testimonial</p>
-                            </div>
-                        </div>
-                        <div class="testimonial-text">
-                            <img src="img/BLACKK.gif" alt="Image">
-                            <a id="openModal2" class="play-btn video-popup" style="cursor: pointer;">
-                                <i class="fa fa-play" style="color: #FDBE33;"></i>
-                            </a>
-                        </div>
-
-                        <div id="myModal2" class="modal">
-                            <div class="modal-content">
-                                <span class="closeVid" style="color: grey;">&times;</span>
-                                <video id="myVideo2" width="100%" controls>
-                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/t1.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="testimonial-item">
-                        <div class="testimonial-profile">
-
-                            <div class="testimonial-name">
-                                <h3>Grade R Centre of Excellence</h3>
-                                <p>Testimonial</p>
-                            </div>
-                        </div>
-                        <div class="testimonial-text">
-                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG12.JPG" alt="Image">
-                        </div>
-                    </div> -->
-
                 </div>
             </div>
         </div>
@@ -194,8 +146,8 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/ndumo4.PNG" alt="Image">
-                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="videos/ndumo4.mp4">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/ndumo4.PNG" alt="Image">
+                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/ndumo4.mp4">
                                 <i class="fa fa-play" style="color: #FDBE33;"></i> 
                             </a>
                         </div>
@@ -209,8 +161,8 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/ndumo1.PNG" alt="Image">
-                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="videos/Ndumo1.mp4">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/ndumo1.PNG" alt="Image">
+                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/Ndumo1.mp4">
                                 <i class="fa fa-play" style="color: #FDBE33;"></i> 
                             </a>
                         </div>
@@ -224,8 +176,8 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/ndumo3.jpeg" alt="Image">
-                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="videos/ndumo3.mp4">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/ndumo3.jpeg" alt="Image">
+                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/ndumo3.mp4">
                                 <i class="fa fa-play" style="color: #FDBE33;"></i> 
                             </a>
                         </div>
@@ -239,71 +191,12 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/ndumo2.PNG" alt="Image">
-                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="videos/Ndumo2.mp4">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/ndumo2.PNG" alt="Image">
+                            <a id="openModal1" class="play-btn video-popup" style="cursor: pointer;" href="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/Ndumo2.mp4">
                                 <i class="fa fa-play" style="color: #FDBE33;"></i> 
                             </a>
                         </div>
-
-                        <!-- <div id="myModal1" class="modal">
-                            <div class="modal-content">
-                                <span class="closeVid">&times;</span>
-                                <video id="myVideo1" width="100%" controls>
-                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/tvh testimonial.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
-                        </div> -->
                     </div>
-                    <!-- <div class="testimonial-item">
-                        <div class="testimonial-profile">
-
-                            <div class="testimonial-name">
-                                <p>Participant</p>
-                            </div>
-                        </div>
-                        <div class="testimonial-text">
-                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/testimonial1.PNG" alt="Image">
-                        </div>
-                    </div> -->
-                    <!-- <div class="testimonial-item">
-                        <div class="testimonial-profile">
-
-                            <div class="testimonial-name">
-                                
-                                <p>Testimonial</p>
-                            </div>
-                        </div>
-                        <div class="testimonial-text">
-                            <img src="img/BLACKK.gif" alt="Image">
-                            <a id="openModal2" class="play-btn video-popup" style="cursor: pointer;">
-                                <i class="fa fa-play" style="color: #FDBE33;"></i>
-                            </a>
-                        </div>
-
-                        <div id="myModal2" class="modal">
-                            <div class="modal-content">
-                                <span class="closeVid" style="color: grey;">&times;</span>
-                                <video id="myVideo2" width="100%" controls>
-                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/t1.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="testimonial-item">
-                        <div class="testimonial-profile">
-
-                            <div class="testimonial-name">
-                                <h3>Grade R Centre of Excellence</h3>
-                                <p>Testimonial</p>
-                            </div>
-                        </div>
-                        <div class="testimonial-text">
-                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG12.JPG" alt="Image">
-                        </div>
-                    </div> -->
-
                 </div>
             </div>
         </div>
@@ -337,7 +230,7 @@
                             <a href="donationjourney.html">Donate</a> 
                         </div>
                     </div>
-                    <p style="color: white;"><i>This website was created by a group of final year TUT students, click <a href="img/Team Profiles.pdf" style="color: #FDBE33;">here</a> to learn more.</i></p>
+                    <p style="color: white;"><i>This website was created by a group of final year TUT students, click <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Team Profiles.pdf" style="color: #FDBE33;">here</a> to learn more.</i></p>
                 </div>
             </div>
 
