--- a/donationjourney.html
+++ b/donationjourney.html
@@ -9,7 +9,7 @@
         <meta content="Free Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/favicon.ico" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
             <!-- Nav Bar Start -->
             <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
-                    <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
+                    <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Landscape_CMYK---bg.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -61,16 +61,6 @@
                         <a href="donationjourney.html" class="nav-item nav-link donate-button">
                             <button class="donate-pulse-button">DONATE</button>
                         </a>
-                        <!-- <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
-                            <div class="dropdown-menu">
-
-                                <a href="testimonials.html" class="dropdown-item">Testimonials</a>
-                                <a href="gallery.html" class="dropdown-item">Gallery</a>
-                                <a href="index.html#team" class="dropdown-item">Meet the team</a>
-                                <a href="#donate" class="dropdown-item">Contact Us</a>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -103,7 +93,7 @@
         <div class="timeline-container">
             <div class="start">
                 <h3><b>START HERE</b></h3>
-            <img src="img/arrow.png" alt="arrow" >
+            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/arrow.png" alt="arrow" >
             </div>
             
             <ul class="timeline">
