--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -39,7 +39,7 @@
             <!-- Nav Bar Start -->
             <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
-                    <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
+                    <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Landscape_CMYK---bg.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -62,16 +62,6 @@
                         <a href="donationjourney.html" class="nav-item nav-link donate-button">
                             <button class="donate-pulse-button">DONATE</button>
                         </a>
-                        <!-- <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
-                            <div class="dropdown-menu">
-
-                                <a href="testimonials.html" class="dropdown-item">Testimonials</a>
-                                <a href="gallery.html" class="dropdown-item">Gallery</a>
-                                <a href="index.html#team" class="dropdown-item">Meet the team</a>
-                                <a href="#donate" class="dropdown-item">Contact Us</a>
-                            </div>
-                        </div> -->
                         <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
                     </div>
                 </div>
@@ -94,7 +84,7 @@
 
     <div style="display: flex; align-items: flex-start; margin-left: 150px;">
         <div style="flex: 1; text-align: center;">
-            <img src="img/Prof lydia.jpg" alt="hackathon-image" style="width: 80%;"><br>
+            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Prof lydia.jpg" alt="hackathon-image" style="width: 80%;"><br>
             <div class="project-leaders">
                 <p><strong><i>Project Leader: Prof Lydia Mphahlele</i></strong></p>
             </div>
