--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -38,7 +38,7 @@
             <!-- Nav Bar Start -->
             <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
-                    <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
+                    <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Landscape_CMYK---bg.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -93,7 +93,7 @@
 
     <div style="display: flex; align-items: flex-start; margin-left: 150px;">
         <div style="flex: 1; text-align: center;">
-            <img src="img/Dr Cheryl Ogilvie.jpg" alt="hackathon-image" style="width: 70%;"><br>
+            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Dr Cheryl Ogilvie.jpg" alt="hackathon-image" style="width: 70%;"><br>
             <div class="project-leaders">
             <p>
                 <strong><i>Project Leader: Dr Cheryl Ogilvie</i></strong>
