--- a/ndumoVideo.html
+++ b/ndumoVideo.html
@@ -80,7 +80,7 @@
                 <!-- Nav Bar Start -->
                 <div class="navbar navbar-expand-lg bg-light navbar-light">
                     <div class="container-fluid">
-                        <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
+                        <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/Landscape_CMYK---bg.png" class="navbar-brand">
                         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                             <span class="navbar-toggler-icon"></span>
                         </button>
