--- a/tvhVideo.html
+++ b/tvhVideo.html
@@ -88,19 +88,7 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav ml-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <!-- <a href="index.html#about" class="nav-item nav-link">About</a>
-                            <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
-                            <a href="index.html#events" class="nav-item nav-link">Events</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
-                                <div class="dropdown-menu">
-    
-                                    <a href="testimonials.html" class="dropdown-item">Testimonials</a>
-                                    <a href="index.html#team" class="dropdown-item">Meet the team</a>
-                                    <a href="#donate" class="dropdown-item">Contact Us</a>
-                                </div>
-                            </div> -->
-                            
+
                             <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
                         </div>
                     </div>
@@ -124,7 +112,7 @@
                 <div class="container-fluid h-100">
                     <div class="row h-100 align-items-center">
                      <video class="background-video" autoplay loop>
-                            <source src="vid/AWS_eKasi_vid1.mp4" type="video/mp4" />
+                            <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/AWS_eKasi_vid1.mp4" type="video/mp4" />
                             Your browser does not support the video tag.
                         </video> 
                     </div>
