Putting videos in the bucket

--- a/gallery.html
+++ b/gallery.html
@@ -460,10 +460,10 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-link">
                         <h2>Popular Links</h2>
-                        
+                        <a href="index.html">Home</a>
                         <a href="team.html">Meet The Team</a>
                         <a href="testimonials.html">Testimonials</a>
-                        <a href="gallery.html">Donate</a>  
+                        <a href="donationjourney.html">Donate</a>  
                     </div>
                 </div>
                 <p style="color: white;"><i>This website was created by a group of final year TUT students, click <a href="img/Team Profiles.pdf" style="color: #FDBE33;">here</a> to learn more.</i></p>
