--- a/team.html
+++ b/team.html
@@ -351,7 +351,7 @@
                             <div class="testimonial-profile">
                                 
                                 <div class="testimonial-name">
-                                    <h3>Thapelo Aphane</h3>
+                                    <h3 >Thapelo Aphane</h3>
                                     <p>Project Manager</p>
                                 </div>
                             </div>
@@ -388,10 +388,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="index.html#ourtarget">Our Target</a>                    
+                            <a href="index.html">Home</a>                    
                             <a href="testimonials.html">Testimonials</a> 
                             <a href="gallery.html">Gallery</a>
-                            
+                            <a href="donationjourney.html">Donate</a>
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
