--- a/gradeRVideo.html
+++ b/gradeRVideo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>#TWENTYFROM20.ztm\Gallery</title>
+        <title>#TWENTYFROM20.ztm\Grade R Video</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -114,9 +114,7 @@
 
          <!-- Stories -->
          <div class="container-fluid stories">
-            <div class="row justify-content-center">
             
-            </div>
          </div>
          <!-- End Stories -->
               <!-- Spot -->
@@ -124,7 +122,7 @@
                 <div class="container-fluid h-100">
                     <div class="row h-100 align-items-center">
                      <video class="background-video" autoplay loop>
-                            <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/NdumoVideo.mp4" type="video/mp4" />
+                            <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/WhatsApp Video 2024-09-10 at 13.24.14.mp4" type="video/mp4" />
                             Your browser does not support the video tag.
                         </video> 
                     </div>
@@ -137,7 +135,7 @@
                <div class="col-md-8  col-sm-12 wow fadeInDown">
                   <p >
                     <div class="pulse-link">
-                        <a href="https://www.youtube.com/watch?v=aq3Tg19k2LA" >View Full Video</a>
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/WhatsApp Video 2024-09-10 at 13.24.14.mp4" >View Full Video</a>
                     </div>                     
                   </p>
                </div>
