--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                                <a class="btn btn-custom btn-play" href="NoVideo.html">Watch Video</a>
+                                <a class="btn btn-custom btn-play" href="gradeRVideo.html">Watch Video</a>
                             </div>
                         </div>
                     </div>
